Added webapp for validation. Updated serialization code.
